--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cocoswap/sdk",
+  "name": "cocoswap-sdk",
   "license": "MIT",
   "version": "1.0.0",
   "description": "🛠 An SDK for building applications on top of BSCswap.",
